--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html manifest="dict.appcache"> 
   <head>
     <meta charset="utf-8">
+    <meta name="theme-color" content="#ff6600">
     <meta name="author" content="Knowledge Chikuse">
     <meta name="viewport" content="width=device-width">
-    <meta name="theme-color" content="#ff6600">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="icon" href="favicon.ico">
@@ -15,12 +15,12 @@
   <body>
     <div class="list list-inset">
       <label class="item item-input">
-        <i class="icon ion-search placeholder-icon"></i> 
+        <i class="icon ion-search"></i> 
         <input type="text" placeholder="Enter your search phrase" autofocus>
       </label>
       <ul class="list"></ul>
     </div>
-    <div class="spinner"></div>
+    <loadr></loadr>
     <script src="js/lunr.js"></script>
     <script src="js/dictionary.js"></script>
     <script src="js/app.js"></script>
